fix: flower heads causing extra margin

--- a/_sass/screen.scss
+++ b/_sass/screen.scss
@@ -991,6 +991,9 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
 .mainoverview-parent {
   background: url(../img/hero/overview-bg-repeat.png);
   position: relative;
+  background-repeat: no-repeat;
+  background-color: #13161F;
+  top: -2px;
 }
 .mainoverview {
     position: relative;
@@ -1261,7 +1264,6 @@ h1 span.fa, h2 span.fa, h3 span.fa, h4 span.fa, h5 span.fa, h6 span.fa {
     width: 503px;
     height: 503px;
     margin-bottom: 35px;
-    border: 1px solid red;
 }
 .herecomesbitcoin-fairy-container {
     flex: 1;
@@ -4031,7 +4033,9 @@ html[data-theme="dark"] .dark-theme-toggle::before {
     .herecomesbitcoin-fairy {
       width: 311px;
       height: 312px;
-      border: 1px solid red;
+    }
+    .herecomesbitcoin-flower-heads {
+      display: none;
     }
 }
 
@@ -5168,9 +5172,7 @@ html[data-theme="dark"] .dark-theme-toggle::before {
     .donate-btn {
         display: none;
     }
-    .herecomesbitcoin-flower-heads {
-      display: none;
-    }
+    
 }
 
 @import 'wallet-menu-noscript';
